--- a/releasenotes/1.9.rst
+++ b/releasenotes/1.9.rst
@@ -119,7 +119,7 @@ dojox/mobile
      to change the type of ``ListItem`` instances created by the list.
    * dojox/mobile list widgets now provide filtering capabilities.
      For details, see :ref:`dojox/mobile/FilteredListMixin <dojox/mobile/FilteredListMixin>`.
-   * dojox/mobile editable list widgets now have callbacks functions on user actions.
+   * dojox/mobile editable list widgets now have callback functions on user actions.
      For details, see :ref:`dojox/mobile/RoundRectList <dojox/mobile/RoundRectList#editable-list-example>` and 
      :ref:`dojox/mobile/EdgeToEdgeList <dojox/mobile/EdgeToEdgeList#editable-list-example>`.
    * Internet Explorer 10 is now supported "natively" (that is, without compatibility code
