--- a/releasenotes/1.9.rst
+++ b/releasenotes/1.9.rst
@@ -7,13 +7,12 @@ Dojo 1.9 Release Notes
 .. contents ::
    :depth: 3
 
+User Agent Support
+==================
 
-Browser Support
-===============
-
-The following browsers have been tested and are supported in this release. If a browser version is not listed as
+The following user agents have been tested and are supported in this release. If a user agent version is not listed as
 supported, it still may work, especially on browsers with rapid release cycles (Chrome, Firefox). Future minor releases
-of Dojo might include fixes to support future releases of these browsers, but we cannot guarantee it.
+of Dojo might include fixes to support future releases of these browsers, but it is not guaranteed:
 
 **Desktop**
 
@@ -39,12 +38,12 @@ of Dojo might include fixes to support future releases of these browsers, but we
 
 TODO: Link to page with specific vendor device models tested on
 
-**Server-Side Platforms**
+**Server-Side User Agents**
 
-* While not a browser, Dojo 1.8 also works inside Node 0.6.x and 0.8.x.
+* Node 0.6.X, 0.8.X
 
-Dojo
-====
+Dojo Core
+=========
 
 dojo/node
 ---------
@@ -57,7 +56,8 @@ dojo/parser
 -----------
 
 The parser now supports the ability to pass a context ``require()`` when parsing a document via adding it to the
-``options`` hash passed during parse (`#16112 <http://bugs.dojotoolkit.org/ticket/16112>`_).
+``options`` hash passed during parse (`#16112 <http://bugs.dojotoolkit.org/ticket/16112>`_).  This allows for the use
+of relative MIDs to be used, specifically in Widget templates.
 
 Dijit
 =====
@@ -82,13 +82,16 @@ The ``_WidgetsInTemplateMixin`` supports using relative MIDs in the widget templ
 Also, ``dijit/InlineEditBox`` and ``dijit/_editor/plugins/FontChoice`` were updated to take advantage of this new
 feature.
 
-**Note** Because of the synch nature of the widget lifecycle, you still have to require in any modules used in the
+**Note** Because of the synchronous nature of the widget lifecycle, you still have to require in any modules used in the
 template, as the auto-require feature will not work properly with widgets.
 
 dijit/BackgroundIframe
 ----------------------
-There's now a "config-bgIframe" has() flag that can be used to explicitly turn on/off the background iframe behind popups
-that's useful when a page contains applets, and also for older versions of IE with the bleed through select problem.
+
+There's now a "config-bgIframe" ``has()`` flag that can be used to explicitly turn on/off the background iframe behind
+popups that's useful when a page contains applets, and also for older versions of IE with the bleed through select
+problem.
+
 Usage is:
 
 .. html ::
@@ -215,50 +218,56 @@ dojox/gfx
 Util
 ====
 
-Doh
+DOH
 ---
 
-Support added for returning a ``dojo/promise/Promise`` or ``dojo/Deferred`` from a test fixture.
-Before, you could only return a ``doh.Deferred`` or a ``dojo/_base/Deferred``.
+Support added for returning a ``dojo/promise/Promise`` or ``dojo/Deferred`` from a test fixture.  Before, you could
+only return a ``doh.Deferred`` or a ``dojo/_base/Deferred``.
 
 Demos
 =====
 
-
 Migration Notes
 ===============
-dijit/Calendar migration
-------------------------
-To avoid accessibility violations the Calendar template changed so that the month name and arrows, plus the
-previous/current/next year, are not contained within the TABLE node.   CSS was correspondingly changed.
 
-dijit/_Container.addChild() migration
--------------------------------------
-In 1.8, the behavior of dijit/_Container (and subclasses') addChild() method was undefined
-if some of _Container.containerNode's direct children were plain DOM nodes, rather than widgets.
+dijit/Calendar
+--------------
 
-In practice though, when addChild(widget, n) would count to the n'th position, it would skip over the plain DOMNodes
-and only include the child widgets in the count.
-Further, if the existing child widgets were not direct children of this.containerNode, then addChild()
-would tend to place the new widget as a next or previous sibling of an existing
-child widget, rather than as a direct child of this.containerNode.
+To avoid accessibility issues, the ``dijit/Calendar`` template was changed so that the month name and arrows, plus the
+previous, current and next year, are not contained within the ``<table>`` node.   CSS was correspondingly changed.
 
-In 1.9, parent.addChild(widget, n) places widget.domNode as the n'th DOMNode child of parent.containerNode, just like
-domConstruct.place() does.
+dijit/_Container::addChild()
+----------------------------
 
-If your app was calling parent.addChild() on a widget that contained plain DOM nodes, and depending on the undefined
-behavior listed above, you may need to update your logic.
+In 1.8, the behavior of ``dijit/_Container`` (and subclasses) ``.addChild()`` method was undefined if some of the 
+``_Container.containerNode`` direct children were plain DOM nodes, rather than widgets.
 
-dijit template changes
+In practice though, when ``addChild(widget, n)`` would count to the *n*'th position, it would skip over the plain
+DOMNodes and only include the child widgets in the count.
+
+Further, if the existing child widgets were not direct children of ``this.containerNode``, then ``.addChild()`` would
+tend to place the new widget as a next or previous sibling of an existing child widget, rather than as a direct child of
+``this.containerNode``.
+
+In 1.9, ``parent.addChild(widget, n)`` places ``widget.domNode`` as the *n*'th DOMNode child of
+``parent.containerNode``, just like ``dojo/dom-construct::place()`` does.
+
+If your application was calling ``parent.addChild()`` on a widget that contained plain DOM nodes, and depending on the
+undefined behavior listed above, you may need to update your logic.
+
+dijit Template Changes
 ----------------------
-dijit/templates/InlineEditBox.html and dijit/form/robot/DropDownBox.html were changed in this release.
-If you have subclasses of InlineEditBox, ComboBox, FilteringSelect, or DateTextBox that have modified those templates,
-you may need to update your templates.
 
-dojox/charting migration
-------------------------
+``dijit/templates/InlineEditBox.html`` and ``dijit/form/robot/DropDownBox.html`` were changed in this release.
 
-Tooltip, highlight and magnify actions are not anymore hardcoded into the spider plot (dojox/charting/plot2d/Spider). One needs to explicitly set them up on the plot to get them activated as follows:
+If you have subclasses of ``InlineEditBox``, ``ComboBox``, ``FilteringSelect``, or ``DateTextBox`` that have modified
+those templates, you may need to update your templates.
+
+dojox/charting
+--------------
+
+Tooltip, highlight and magnify actions are no longer "hardcoded" into the spider plot
+(``dojox/charting/plot2d/Spider``). The need to be explicitly setup on the plot to utilize them, for example:
 
 .. js ::
 
