Updates to /releasenotes/1.9 via Wiki

--- a/releasenotes/1.9.rst
+++ b/releasenotes/1.9.rst
@@ -160,6 +160,8 @@ dojox/mobile
      particular theme has been drastically reduced.
    * The 'Custom' theme is now generated from 2 main colors, facilitating the creation of a new theme 
      based on arbitrary colors.
+   * The ``dojox/mobile/TabBar`` widget now support resizing its children so that they evenly fill all the space
+     available in the bar. This is done by setting the new attribute "fill" to the value "always".
    * New Android Holo dark theme used by default on Android 3.x and 4.x devices. For 
      backward compatibility, you can force 'Android' theme on all Android devices by 
      configuring ``deviceTheme``:
@@ -379,4 +381,3 @@ by
   <script>
     require(["dojox/charting/Chart"], ...);
   </script>
-
