fixed typo in dojox.calendar section

--- a/releasenotes/1.9.rst
+++ b/releasenotes/1.9.rst
@@ -284,7 +284,7 @@ dojox/calendar
 
   * Better support of asynchronous stores. Interactive event creation is now working with asynchronous stores (event is added to store at the end of the gesture). Event renderers are notified of the current store state (being created but not added yet to store, being added/updated, in store). An example is available (tests/asynchStore.html)
   * New properties have been added to further customize the the row header of the column view.
-  * Grid cells can now be customized either programmatically by providing a custom function (styleGridCellFunc property of vies) or by CSS (ex .dojoxCalendar .dojoxCalendarGrid .Wed.H12 { ... } ). See tests/calendarStyleGridCell.html and tests/calendarStyleGridCellCSS.html.
+  * Grid cells can now be customized either programmatically by providing a custom function (styleGridCellFunc property of views) or by CSS (ex .dojoxCalendarGrid .Wed.H12 { ... } ). See tests/calendarStyleGridCell.html and tests/calendarStyleGridCellCSS.html.
   * Query options to be set when querying the store can now be specified on the calendar using queryOptions property.
 
 *Incompatibilities*
