--- a/releasenotes/1.9.rst
+++ b/releasenotes/1.9.rst
@@ -62,6 +62,28 @@ of relative MIDs to be used, specifically in Widget templates.
 Dijit
 =====
 
+dijit and dojo/domReady!
+------------------------
+Dijit has been upgraded to be able to work with the dojo/domReady! plugin.
+Previously using dojo/ready was recommended, but now using dojo/domReady! is recommended.
+The only caveat is that if you are using the parser and
+have custom javascript code to run, you should run the parser manually rather than setting parseOnLoad:true.
+
+Example usage:
+
+.. js ::
+
+   define(["dojo/parser", "dojo/store/Memory", "dojo/domReady!], function(parser, Memory){
+      // script code that needs to run before parse
+      myMemoryStore = new Memory(...);
+      ...
+
+      parser.parse();
+
+      // script code that needs to run after parse
+      ...
+   });
+
 dijit/_AttachMixin
 ------------------
 :ref:`dijit/_AttachMixin <dijit/_AttachMixin>` is a new mixin to perform the data-dojo-attach-point and
